--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Plugin for Zabbix CLI using entrypoints"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "zabbix-cli@git+https://github.com/pederhan/zabbix-cli.git@command-plugins",
+    "zabbix-cli@git+https://github.com/unioslo/zabbix-cli.git@master",
 ]
 
 [project.optional-dependencies]
